Conciliación de saldos de HEINZ y COLIMPEL

--- a/egakat-io-conciliaciones-transformation/src/main/resources/application.properties
+++ b/egakat-io-conciliaciones-transformation/src/main/resources/application.properties
@@ -79,7 +79,7 @@ logging.level.com.egakat=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 logging.level.com.microsoft.sqlserver.jdbc=ERROR
-logging.level.org.apache.http=ERROR
+logging.level.org.apache.http=DEBUG
 
 #-----------------------------------------------------------------------------------------------------------------------
 #- 
