--- a/egakat-io-conciliaciones-transformation/src/main/resources/application.properties
+++ b/egakat-io-conciliaciones-transformation/src/main/resources/application.properties
@@ -55,7 +55,7 @@ integration.files.datasource.connection-test-query=SELECT 1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.open-in-view=false
 
@@ -77,10 +77,11 @@ com.egakat.rest.connection.read-timeout=${com.egakat.rest.connection.timeout}
 #-----------------------------------------------------------------------------------------------------------------------
 logging.level.com.egakat=DEBUG
 logging.level.org.springframework.web=DEBUG
+log4j.logger.org.springframework.transaction=DEBUG
+log4j.logger.org.hibernate.transaction=DEBUG
 logging.level.org.hibernate=ERROR
 logging.level.com.microsoft.sqlserver.jdbc=ERROR
-logging.level.org.apache.http=DEBUG
-
+logging.level.org.apache.http=ERROR
 #-----------------------------------------------------------------------------------------------------------------------
 #- 
 #-----------------------------------------------------------------------------------------------------------------------
