--- a/egakat-io-conciliaciones-commons/pom.xml
+++ b/egakat-io-conciliaciones-commons/pom.xml
@@ -43,4 +43,15 @@
 		</plugins>
 	</build>
 	
+	<dependencies>
+		<dependency>
+			<groupId>com.egakat</groupId>
+			<artifactId>egakat-integration-commons-archivos</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.egakat</groupId>
+			<artifactId>egakat-integration-core-files</artifactId>
+		</dependency>
+	</dependencies>
 </project>
